# PyArch

./: .env  README.md  docker-compose.old.yml  docker-compose.override.yml  docker-compose.yml  requirements-dev.txt  requirements.txt
fastapi_app/: README.md  cookiecutter-config-file.yml  docker-compose.yml
fastapi_app/backend/app/: pyproject.toml
fastapi_app/backend/app/app/: worker.py
fastapi_app/backend/app/app/api/api_v1/: api.py
fastapi_app/backend/app/app/api/api_v1/endpoints/: animals.py  neo4j_example.py  utils.py
fastapi_app/backend/app/app/core/: config.py
fastapi_app/backend/app/app/schemas/: __init__.py  animals.py  user.py
fastapi_app/backend/app/app/tests/: conftest.py
fastapi_app/backend/app/app/tests/api/api_v1/: test_celery.py  test_users.py
fastapi_app/backend/app/app/tests/utils/: utils.py
fastapi_app/fastapi_app/: README.md  docker-compose.override.yml  docker-compose.yml
flask_app/: Dockerfile  Dockerfile_nb  LICENSE  README.md  docker-compose.yml  package.json  webpack.config.js
flask_app/.github/workflows/: lint.yaml
flask_app/flask_app/: app.py  extensions.py  settings.py
flask_app/flask_app/api/: __init__.py
flask_app/flask_app/public/: forms.py
flask_app/flask_app/templates/: footer.html  layout.html  nav.html
flask_app/requirements/: prod.txt
flask_app/shell_scripts/: dev_entrypoint.sh  notebook_entrypoint.sh
flask_app/tests/: conftest.py  factories.py  settings.py  test_database.py  test_forms.py  test_models.py
ui/: Dockerfile  README.md
ui/notebooks/: neo4j_example.ipynb  request_a_kangaroo.ipynb
(+17 files in other folders)
